<resources>
    <string name="app_name">RescueHub</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Selamat Datang di RescueHub</string>
    <string name="tv_onboard_desc">Bergabunglah dengan komunitas kami\nuntuk memberikan bantuan darurat kepada\nmereka yang membutuhkan di sekitar Anda</string>
    <string name="Lanjut">lanjut</string>
    <string name="bagaimana_cara_kerjanya">Bagaimana Cara Kerjanya?</string>
    <string name="tv_onboard_2_desc">Dapatkan notifikasi saat ada\nseseorang di sekitar Anda\nyang membutuhkan bantuan</string>
    <string name="tv_onboard_2_desc_2">Pilih untuk menghubungi mereka\nlangsung atau menavigasi ke\nlokasi mereka menggunakan peta</string>
    <string name="kembali">Kembali</string>
    <string name="ayo_mulai">Ayo Mulai!</string>
    <string name="tv_onboard_3_desc">Aktifkan notifikasi untuk menerima\npemberitahuan real-time tentang\npermintaan bantuan baru di area Anda</string>
    <string name="tv_onboard_desc_3_2">Respons cepat Anda bisa membuat perbedaan</string>
    <string name="mulai">Mulai</string>
    <string name="label_username">Masukan Username</string>
    <string name="label_password">Masukan Password</string>
    <string name="masuk">Masuk</string>
    <string name="kamera">Kamera</string>
    <string name="deskripsi_penanganan">Deskripsi Penanganan</string>
    <string name="kirim">kirim</string>
    <string name="galeri">Galeri</string>
    <string name="hubungi">Hubungi</string>
    <string name="tanggapi">Tanggapi</string>
    <string name="siap_membantu_hari_ini">Siap Membantu Hari Ini?</string>
    <string name="mode_gelap">Mode Gelap</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="keluar">Keluar</string>
    <string name="selamat_datang_n_s">Selamat Datang\n%s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="selesaikan_bantuan">Selesaikan Bantuan</string>
</resources>