<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.rescuehub.ui.onboarding.ThirdOnboardingFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="34dp"
            android:src="@drawable/onboard_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_onboard1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:text="@string/ayo_mulai"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/iv_welcome"
            app:layout_constraintStart_toStartOf="@id/iv_welcome"
            app:layout_constraintTop_toBottomOf="@id/iv_welcome" />

        <TextView
            android:id="@+id/tv_onboard_desc_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/tv_onboard_3_desc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@id/tv_onboard1"
            app:layout_constraintStart_toStartOf="@id/tv_onboard1"
            app:layout_constraintTop_toBottomOf="@id/tv_onboard1" />

        <TextView
            android:id="@+id/tv_onboard_desc_2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_onboard_desc_3"
            app:layout_constraintEnd_toEndOf="@id/tv_onboard_desc_3"
            app:layout_constraintTop_toBottomOf="@id/tv_onboard_desc_3"
            android:text="@string/tv_onboard_desc_3_2"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:padding="8dp"
            android:text="@string/mulai"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>