<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:src="@drawable/onboard_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_onboard2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:text="@string/bagaimana_cara_kerjanya"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/iv_welcome"
            app:layout_constraintStart_toStartOf="@id/iv_welcome"
            app:layout_constraintTop_toBottomOf="@id/iv_welcome" />

        <ImageView
            android:id="@+id/iv_notification_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/notification_icon"
            app:layout_constraintBottom_toBottomOf="@id/tv_onboard_desc_2"
            app:layout_constraintEnd_toStartOf="@id/tv_onboard_desc_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_onboard_desc_2" />

        <ImageView
            android:id="@+id/iv_location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location_icon"
            app:layout_constraintBottom_toBottomOf="@id/tv_onboard_desc_2_2"
            app:layout_constraintEnd_toEndOf="@id/iv_notification_icon"
            app:layout_constraintStart_toStartOf="@id/iv_notification_icon"
            app:layout_constraintTop_toTopOf="@id/tv_onboard_desc_2_2" />

        <TextView
            android:id="@+id/tv_onboard_desc_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/tv_onboard_2_desc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@id/tv_onboard2"
            app:layout_constraintStart_toStartOf="@id/tv_onboard2"
            app:layout_constraintTop_toBottomOf="@id/tv_onboard2" />

        <TextView
            android:id="@+id/tv_onboard_desc_2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/tv_onboard_2_desc_2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@id/tv_onboard2"
            app:layout_constraintStart_toStartOf="@id/tv_onboard2"
            app:layout_constraintTop_toBottomOf="@id/tv_onboard_desc_2" />

        <!--<Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:padding="8dp"
            android:text="@string/Lanjut"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:padding="8dp"
            android:tex t="@string/kembali"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>